# recorderRS

./: CMakeLists.txt
cmake/modules/: Findlibrealsense.cmake
src/: StereoCameraRealSense.cpp  StereoCameraRealSense.h  main.cpp
